<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:padding="8dp"
            android:textSize="@dimen/fontdime"
            android:text="@string/tv_percent_Gym" />

        <TextView
            android:id="@+id/tv_percent_Gym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView12"
            android:layout_toEndOf="@+id/textView12"
            android:background="@color/colorPrimary"
            android:padding="4dp"
            android:text=""
            android:textSize="@dimen/fontdime"
            android:textStyle="bold" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:padding="8dp"
            android:textSize="@dimen/fontdime"
            android:text="@string/tv_Gym_time" />

        <TextView
            android:id="@+id/tv_Time_Gym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView13"
            android:textStyle="bold"
            android:padding="4dp"
            android:textSize="@dimen/fontdime"
            android:background="@color/colorPrimary"
            android:layout_alignBaseline="@+id/textView13"
            android:text="" />

    </RelativeLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <TextView

            android:textColor="@color/dark"
            android:textSize="@dimen/fontdime"
            android:textStyle="bold"
            android:text="@string/tv_Gym_ListWork_day"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView

            android:textColor="@color/dark"
            android:textSize="@dimen/fontdime"
            android:textStyle="bold"
            android:text="@string/tv_Gym_ListWork_gender"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView

            android:textColor="@color/dark"
            android:textSize="@dimen/fontdime"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/tv_Gym_ListWork_fhour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView

            android:textColor="@color/dark"
            android:textSize="@dimen/fontdime"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/tv_Gym_ListWork_thour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>



    </LinearLayout>
    <ListView
        android:id="@+id/list_Gym_Work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
