<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tv_tenant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            android:textSize="@dimen/fontdimeTitle"
            android:text="@string/Detail_rent_tenant_name"/>
        <TextView
            android:id="@+id/var_tv_tenant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/fontdimeTitle"
            android:text=""
            android:layout_alignBaseline="@id/tv_tenant_name"
            android:layout_toEndOf="@+id/tv_tenant_name"/>
        <TextView
            android:id="@+id/tv_Rentstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/fontdime"
            android:text="@string/Detail_rent_Start"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/tv_tenant_name"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/var_tv_Rentstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/fontdime"
            android:text=""
            android:layout_alignBaseline="@id/tv_Rentstart"
            android:layout_toEndOf="@+id/tv_Rentstart"/>
        <TextView
            android:id="@+id/tv_rent_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/fontdime"
            android:text="@string/Detail_rent_end"
            android:layout_marginStart="5dp"
            android:layout_alignBaseline="@id/var_tv_Rentstart"
            android:layout_toEndOf="@+id/var_tv_Rentstart"/>
        <TextView
            android:id="@+id/var_tv_rent_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/fontdime"
            android:text=""
            android:layout_alignBaseline="@id/tv_rent_end"
            android:layout_toEndOf="@+id/tv_rent_end"/>
        <TextView
            android:id="@+id/tv_rent_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/fontdime"
            android:text="@string/Detail_rent_amount"
            android:layout_below="@+id/tv_Rentstart"
            android:layout_marginTop="8dp"
            android:layout_marginStart="3dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/var_tv_rent_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/fontdimeTitle"
            android:text=""
            android:layout_alignBaseline="@id/tv_rent_amount"
            android:layout_toEndOf="@+id/tv_rent_amount"
            android:layout_marginStart="2dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
